--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -175,7 +175,7 @@ jobs:
         run: ${{ matrix.install-command }}
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
       - name: Build workspaces
-        run: npm run build
+        run: npm run build -ws
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
       - name: Tests
         uses: nick-fields/retry@v3
@@ -188,7 +188,7 @@ jobs:
           timeout_minutes: 30
           max_attempts: 3
           retry_on: error
-          command: npx lerna run test:ci --scope @netlify/build
+          command: npm run test -ws
       - name: Get test coverage flags
         id: test-coverage-flags
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
