--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "prepare": "husky install",
     "lint": "eslint --cache --report-unused-disable-directives --ignore-path .gitignore --max-warnings=0 . --fix",
     "lint:ci": "eslint --cache --report-unused-disable-directives --ignore-path .gitignore --max-warnings=0 .",
-    "build": "lerna run build",
-    "test": "lerna run test",
-    "test:ci": "lerna run test:ci",
+    "build": "npm run build",
+    "test": "npm run test",
     "format": "prettier --write .",
     "format:ci": "prettier --check ."
   },
