--- a/packages/functions/.github/workflows/workflow.yml
+++ b/packages/functions/.github/workflows/workflow.yml
@@ -47,7 +47,7 @@ jobs:
         run: npm ci
         if: "${{ matrix.node-version != '*' }}"
       - name: Tests
-        run: npm run test:ci
+        run: npm run test -ws
       - name: Get test coverage flags
         id: test-coverage-flags
         run: |-
