--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "workspaces": [
     "packages/blobs",
     "packages/dev-utils",
-    "packages/functions"
+    "packages/functions",
+    "packages/static"
   ],
   "version": "0.0.0",
   "private": true,
