--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@netlify/dev-utils",
+  "name": "@netlify/static",
   "version": "1.0.0",
-  "description": "JavaScript utilities for local development",
+  "description": "JavaScript implementtion of Netlify's static file serving logic",
   "type": "module",
   "engines": {
     "node": "^14.16.0 || >=16.0.0"
@@ -40,22 +40,19 @@
   },
   "keywords": [],
   "license": "MIT",
-  "repository": "netlify/dev-utils",
+  "repository": "netlify/static",
   "bugs": {
-    "url": "https://github.com/netlify/dev-utils/issues"
+    "url": "https://github.com/netlify/static/issues"
   },
   "author": "Netlify Inc.",
+  "directories": {
+    "test": "test"
+  },
   "devDependencies": {
-    "@types/lodash.debounce": "^4.0.9",
-    "tmp-promise": "^3.0.3",
-    "tsup": "^7.2.0",
-    "typescript": "^5.0.0",
-    "vitest": "^0.34.0"
+    "@netlify/dev-utils": "1.0.0",
+    "@types/mime-types": "^2.1.4"
   },
   "dependencies": {
-    "@whatwg-node/server": "^0.9.60",
-    "chokidar": "^4.0.1",
-    "decache": "^4.6.2",
-    "lodash.debounce": "^4.0.8"
+    "mime-types": "^2.1.35"
   }
 }
