chore: update release-please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,9 +6,6 @@
   "release-type": "node",
   "plugins": ["node-workspace"],
   "packages": {
-    "packages/blobs": {},
-    "packages/dev": {},
-    "packages/functions": {},
-    "packages/static": {}
+    "packages/cache": {}
   }
 }
