--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "bootstrap-sha": "561b62b0fa408a2f27cdfb9ab63cca82bf49ba0c",
   "include-component-in-tag": true,
   "include-v-in-tag": true,
   "tag-separator": "@",
