chore: bootstrap releases for path: .

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,8 +2,18 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "6fc119838885b0cb831e78ddd23ac01cb819e585",
   "release-type": "node",
-  "plugins": ["node-workspace"],
+  "plugins": [
+    "node-workspace"
+  ],
   "packages": {
-    "packages/cache": {}
+    "packages/cache": {},
+    ".": {
+      "changelog-path": "CHANGELOG.md",
+      "release-type": "node",
+      "bump-minor-pre-major": false,
+      "bump-patch-for-minor-pre-major": false,
+      "draft": false,
+      "prerelease": false
+    }
   }
 }
