--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netlify-primitives-monorepo",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/cache"
   ],
   "version": "0.0.0",
   "scripts": {
