--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,8 +1,18 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "9ae97887beb38dd7eea0f3f90111b9a73e984592",
-  "plugins": ["node-workspace"],
+  "plugins": [
+    "node-workspace"
+  ],
   "packages": {
-    "packages/cache": {}
+    "packages/cache": {},
+    ".": {
+      "package-name": "packages/cache",
+      "changelog-path": "CHANGELOG.md",
+      "bump-minor-pre-major": false,
+      "bump-patch-for-minor-pre-major": false,
+      "draft": false,
+      "prerelease": false
+    }
   }
 }
