--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,6 +3,9 @@
   "bootstrap-sha": "9ae97887beb38dd7eea0f3f90111b9a73e984592",
   "plugins": ["node-workspace"],
   "packages": {
-    "packages/cache": {}
+    "cache": {
+      "path": "packages/cache",
+      "release-type": "node"
+    }
   }
 }
