--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,7 @@
   "bootstrap-sha": "9ae97887beb38dd7eea0f3f90111b9a73e984592",
   "plugins": ["node-workspace"],
   "packages": {
-    "package/cache": {
+    "packages/cache": {
       "release-type": "node"
     }
   }
