--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -31,12 +31,12 @@
     "server.d.ts"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup-node",
     "prepack": "npm run build",
     "test": "vitest run",
     "test:dev": "vitest",
     "test:ci": "npm run build && vitest run",
-    "dev": "tsc --watch"
+    "dev": "tsup-node --watch"
   },
   "keywords": [],
   "license": "MIT",
