chore: reorder packages

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "netlify-primitives-monorepo",
   "private": true,
   "workspaces": [
+    "packages/dev-utils",
     "packages/blobs",
     "packages/cache",
-    "packages/dev",
-    "packages/dev-utils",
     "packages/functions",
     "packages/redirects",
-    "packages/static"
+    "packages/static",
+    "packages/dev"
   ],
   "version": "0.0.0",
   "scripts": {
