--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,9 +2,18 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "1e628be35d2ae079b63ec8e98ca0c6831237b677",
   "last-release-sha": "1e628be35d2ae079b63ec8e98ca0c6831237b677",
-  "plugins": ["node-workspace"],
+  "plugins": [
+    "node-workspace"
+  ],
   "release-type": "node",
   "packages": {
-    "packages/cache": {}
+    "packages/cache": {},
+    ".": {
+      "changelog-path": "CHANGELOG.md",
+      "bump-minor-pre-major": false,
+      "bump-patch-for-minor-pre-major": false,
+      "draft": false,
+      "prerelease": false
+    }
   }
 }
