--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -21,9 +21,7 @@ jobs:
         with:
           token: ${{ steps.get-token.outputs.token }}
       - uses: actions/checkout@v4
-        if: ${{ steps.release.outputs.releases_created }}
-      - uses: actions/checkout@v4
-        if: ${{ steps.release.outputs.prs_created }}
+        if: ${{ steps.release.outputs.releases_created || steps.release.outputs.prs_created }}
       # Generates the release-please manifest file with the version of each package.
       # For some reason, release-please is failing to handle this automatically, so
       # we need to do it ourselves.
