Apply suggestions from code review
Co-authored-by: Jake Champion <jake.champion@netlify.com>

--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -57,9 +57,9 @@
   },
   "keywords": [],
   "license": "MIT",
-  "repository": "netlify/blobs",
+  "repository": "netlify/primitives",
   "bugs": {
-    "url": "https://github.com/netlify/blobs/issues"
+    "url": "https://github.com/netlify/primitives/issues"
   },
   "author": "Netlify Inc.",
   "directories": {
