--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -5,5 +5,7 @@
   "packages/dev-utils": "1.1.0",
   "packages/functions": "3.1.2",
   "packages/redirects": "1.1.0",
+  "packages/runtime": "1.0.0",
+  "packages/runtime-utils": "1.0.0",
   "packages/static": "1.1.0"
 }
