--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -66,10 +66,14 @@
     "test": "test"
   },
   "devDependencies": {
+    "@netlify/dev-utils": "1.1.0",
     "node-fetch": "^3.3.1",
     "semver": "^7.5.3",
     "tmp-promise": "^3.0.3",
     "tsup": "^7.2.0",
     "vitest": "^0.34.0"
+  },
+  "dependencies": {
+    "@netlify/runtime-utils": "1.0.0"
   }
 }
