--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -70,13 +70,8 @@ jobs:
         run: npm run build -ws
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
       - name: Tests
-        uses: nick-fields/retry@v3
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
-        with:
-          timeout_minutes: 30
-          max_attempts: 3
-          retry_on: error
-          command: npm run test -ws
+        run: npm run test -ws
 
   test-build:
     runs-on: ${{ matrix.os }}
@@ -131,17 +126,12 @@ jobs:
         run: npm run build -ws
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
       - name: Tests
-        uses: nick-fields/retry@v3
+        run: npm run test -ws
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
         env:
           # split tests across multiple machines
           CI_NODE_INDEX: ${{ matrix.machine }}
           CI_NODE_TOTAL: 4
-        with:
-          timeout_minutes: 30
-          max_attempts: 3
-          retry_on: error
-          command: npm run test -ws
       - name: Get test coverage flags
         id: test-coverage-flags
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
