--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -42,6 +42,10 @@ jobs:
         if: ${{ steps.release.outputs['packages/dev-utils--release_created'] }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - run: npm publish packages/runtime-utils/ --access=public
+        if: ${{ steps.release.outputs['packages/runtime-utils--release_created'] }}
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}          
       - run: npm publish packages/blobs/ --access=public
         if: ${{ steps.release.outputs['packages/blobs--release_created'] }}
         env:
@@ -56,6 +60,10 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - run: npm publish packages/redirects/ --access=public
         if: ${{ steps.release.outputs['packages/redirects--release_created'] }}
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - run: npm publish packages/runtime/ --access=public
+        if: ${{ steps.release.outputs['packages/runtime--release_created'] }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       - run: npm publish packages/static/ --access=public
