--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -74,3 +74,7 @@ jobs:
         if: ${{ steps.release.outputs['packages/dev--release_created'] }}
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - run: npm publish packages/vite-plugin/ --access=public
+        if: ${{ steps.release.outputs['packages/vite-plugin--release_created'] }}
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}          
