--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -7,5 +7,6 @@
   "packages/redirects": "1.1.1",
   "packages/runtime": "2.0.0",
   "packages/runtime-utils": "1.1.0",
-  "packages/static": "1.1.1"
+  "packages/static": "1.1.1",
+  "packages/vite-plugin": "0.1.0"
 }
