--- a/release-please-config.json
+++ b/release-please-config.json
@@ -14,6 +14,7 @@
     "packages/redirects": {},
     "packages/runtime": {},
     "packages/runtime-utils": {},
-    "packages/static": {}
+    "packages/static": {},
+    "packages/vite-plugin": {}
   }
 }
