--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -26,9 +26,11 @@
     "url": "https://github.com/netlify/primitives/issues"
   },
   "author": "Netlify Inc.",
-  "devDependencies": {
+  "dependencies": {
     "@netlify/cache": "1.10.0",
-    "@netlify/runtime-utils": "1.2.0",
+    "@netlify/runtime-utils": "1.2.0"
+  },
+  "devDependencies": {
     "@types/node": "^22.14.1",
     "tsup": "^8.0.0",
     "vitest": "^3.0.0"
