--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@netlify/static",
   "version": "1.1.2",
-  "description": "JavaScript implementtion of Netlify's static file serving logic",
+  "description": "TypeScript implementtion of Netlify's static file serving logic",
   "type": "module",
   "engines": {
     "node": "^14.16.0 || >=16.0.0"
