--- a/release-please-config.json
+++ b/release-please-config.json
@@ -15,6 +15,7 @@
     "packages/runtime": {},
     "packages/runtime-utils": {},
     "packages/static": {},
+    "packages/types": {},
     "packages/vite-plugin": {}
   }
 }
