--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@netlify/runtime",
-  "version": "2.1.1",
-  "description": "Netlify compute runtime",
+  "name": "@netlify/types",
+  "version": "1.0.0",
+  "description": "TypeScript definitions for the Netlify platform",
   "type": "module",
   "engines": {
     "node": ">=16.0.0"
@@ -14,10 +14,11 @@
   "scripts": {
     "build": "tsup-node",
     "prepack": "npm run build",
-    "test": "vitest run",
+    "test": "npm run types && vitest run",
     "test:dev": "vitest",
-    "test:ci": "npm run build && vitest run",
-    "dev": "tsup-node --watch"
+    "test:ci": "npm run build && npm run test",
+    "dev": "tsup-node --watch",
+    "types": "tsc --noEmit"
   },
   "keywords": [],
   "license": "MIT",
@@ -26,14 +27,10 @@
     "url": "https://github.com/netlify/primitives/issues"
   },
   "author": "Netlify Inc.",
-  "dependencies": {
-    "@netlify/cache": "1.10.0",
-    "@netlify/runtime-utils": "1.2.0",
-    "@netlify/types": "1.0.0"
-  },
   "devDependencies": {
     "@types/node": "^22.14.1",
     "tsup": "^8.0.0",
+    "typescript": "^5.8.3",
     "vitest": "^3.0.0"
   }
 }
