--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -53,7 +53,8 @@
     "test:ci": "run-s build test:ci:*",
     "test:dev:vitest": "vitest run",
     "test:dev:vitest:watch": "vitest watch",
-    "test:ci:vitest": "vitest run"
+    "test:ci:vitest": "vitest run",
+    "publint": "npx -y publint --strict"
   },
   "keywords": [],
   "license": "MIT",
