--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -57,7 +57,8 @@
     "test:dev:tsd": "tsd",
     "test:dev:vitest": "vitest",
     "test:ci": "run-s test:ci:*",
-    "test:ci:vitest": "npm run build && vitest run"
+    "test:ci:vitest": "npm run build && vitest run",
+    "publint": "npx -y publint --strict"
   },
   "ava": {
     "files": [
