--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,9 +72,6 @@ jobs:
       - name: Tests
         if: ${{ !steps.release-check.outputs.IS_RELEASE }}
         run: npm run test -ws
-      - name: Publint
-        if: ${{ !steps.release-check.outputs.IS_RELEASE }}
-        run: npm run publint -ws --if-present
 
   test-build:
     runs-on: ${{ matrix.os }}
@@ -147,3 +144,36 @@ jobs:
           echo "node=node_${node/.*.*/}" >> $GITHUB_OUTPUT
           echo "node=node_${node/.*.*/}" >> $env:GITHUB_OUTPUT
         shell: bash
+
+  lint:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - run: git config --global core.symlinks true
+      # Sets an output parameter if this is a release PR
+      - name: Check for release
+        id: release-check
+        run: |-
+          echo "IS_RELEASE=true" >> $GITHUB_OUTPUT
+        if: ${{ startsWith(github.head_ref, 'release-') }}
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+        if: ${{ !steps.release-check.outputs.IS_RELEASE }}
+      - uses: nrwl/nx-set-shas@v4
+        if: ${{ !steps.release-check.outputs.IS_RELEASE }}
+      - name: Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: 'npm'
+        if: ${{ !steps.release-check.outputs.IS_RELEASE }}
+      - name: Install dependencies
+        run: npm ci
+        if: ${{ !steps.release-check.outputs.IS_RELEASE }}
+      - name: Build
+        run: npm run build -ws
+        if: ${{ !steps.release-check.outputs.IS_RELEASE }}
+      - name: Publint
+        if: ${{ !steps.release-check.outputs.IS_RELEASE }}
+        run: npm run publint -ws --if-present
