--- a/packages/runtime-utils/package.json
+++ b/packages/runtime-utils/package.json
@@ -7,6 +7,7 @@
     "node": ">=16.0.0"
   },
   "main": "./dist/main.js",
+  "exports": "./dist/main.js",
   "types": "./dist/main.d.ts",
   "files": [
     "dist/**/*"
