--- a/packages/redirects/package.json
+++ b/packages/redirects/package.json
@@ -6,26 +6,9 @@
   "engines": {
     "node": "^14.16.0 || >=16.0.0"
   },
-  "main": "./dist/main.cjs",
-  "module": "./dist/main.js",
+  "main": "./dist/main.js",
+  "exports": "./dist/main.js",
   "types": "./dist/main.d.ts",
-  "exports": {
-    ".": {
-      "require": {
-        "types": "./dist/main.d.cts",
-        "default": "./dist/main.cjs"
-      },
-      "import": {
-        "types": "./dist/main.d.ts",
-        "default": "./dist/main.js"
-      },
-      "default": {
-        "types": "./dist/main.d.ts",
-        "default": "./dist/main.js"
-      }
-    },
-    "./package.json": "./package.json"
-  },
   "files": [
     "dist/**/*",
     "server.d.ts"
@@ -36,7 +19,8 @@
     "test": "vitest run",
     "test:dev": "vitest",
     "test:ci": "npm run build && vitest run",
-    "dev": "tsup-node --watch"
+    "dev": "tsup-node --watch",
+    "publint": "npx -y publint --strict"
   },
   "keywords": [],
   "license": "MIT",
