--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -80,7 +80,7 @@
     "test": "test"
   },
   "dependencies": {
-    "@netlify/blobs": "^9.1.2",
+    "@netlify/blobs": "9.1.2",
     "@netlify/dev-utils": "2.2.0",
     "@netlify/serverless-functions-api": "1.41.2",
     "@netlify/zip-it-and-ship-it": "^12.1.0",
