--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/runtime-utils",
     "packages/blobs",
     "packages/cache",
+    "packages/edge-functions",
     "packages/functions",
     "packages/redirects",
     "packages/runtime",
