--- a/packages/headers/tsconfig.json
+++ b/packages/headers/tsconfig.json
@@ -10,8 +10,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "typeRoots": ["node_modules/@types", "types"]
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
