--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@netlify/dev-utils": "2.2.0",
     "@netlify/edge-bundler": "^14.0.4",
+    "@netlify/runtime-utils": "1.3.1",
     "get-port": "^7.1.0"
   }
 }
