--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@netlify/dev-utils": "3.0.0",
     "@netlify/edge-bundler": "^14.0.4",
+    "@netlify/edge-functions-bootstrap": "^2.13.0",
     "@netlify/runtime-utils": "2.0.0",
     "get-port": "^7.1.0"
   }
