--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -4,7 +4,7 @@
   "description": "TypeScript utilities for interacting with Netlify Edge Functions",
   "type": "module",
   "engines": {
-    "node": "^14.16.0 || >=16.0.0"
+    "node": ">=18.0.0"
   },
   "main": "./dist/main.js",
   "exports": {
