feat: use workers

--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -13,8 +13,8 @@
       "default": "./dist/main.js"
     },
     "./dev": {
-      "types": "./dist-dev/main.d.ts",
-      "default": "./dist-dev/main.js"
+      "types": "./dist-dev/node/main.d.ts",
+      "default": "./dist-dev/node/main.js"
     },
     "./version": {
       "types": "./dist/version.d.ts",
