--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -37,7 +37,7 @@
     "dev": "tsup-node --watch",
     "publint": "npx -y publint --strict"
   },
-  "keywords": [],
+  "keywords": ["netlify", "edge functions"],
   "license": "MIT",
   "repository": "netlify/primitives",
   "bugs": {
