--- a/packages/images/package.json
+++ b/packages/images/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@netlify/dev-utils": "^2.2.0",
+    "image-size": "^2.0.2",
     "tsup": "^8.5.0",
     "vitest": "^3.1.4"
   },
