--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,6 +44,8 @@ jobs:
         run: deno cache https://deno.land/x/eszip@v0.55.2/eszip.ts
       - name: Install dependencies
         run: npm ci
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
       - name: Build
         run: npm run build --workspaces=true
       - name: Tests
