--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,6 +10,7 @@
     "packages/cache": {},
     "packages/dev": {},
     "packages/dev-utils": {},
+    "packages/edge-functions": {},
     "packages/functions": {},
     "packages/headers": {},
     "packages/otel": {},
