--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -51,7 +51,9 @@
     "test": "test"
   },
   "devDependencies": {
-    "@netlify/types": "2.0.1"
+    "@netlify/types": "2.0.1",
+    "tsup": "^8.0.0",
+    "vitest": "^3.0.0"
   },
   "dependencies": {
     "@netlify/dev-utils": "3.1.0",
