--- a/packages/headers/package.json
+++ b/packages/headers/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@netlify/dev-utils": "^3.1.0",
     "@types/node": "^20.17.57",
+    "tsup": "^8.0.0",
     "vitest": "^3.1.4"
   },
   "dependencies": {
