--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -36,6 +36,7 @@
     "vitest": "^3.0.0"
   },
   "dependencies": {
+    "@netlify/dev-utils": "3.1.0",
     "@netlify/dev": "4.0.2",
     "chalk": "^5.4.1"
   },
