--- a/package.json
+++ b/package.json
@@ -2,27 +2,14 @@
   "name": "netlify-primitives-monorepo",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "packages/types",
-    "packages/dev-utils",
-    "packages/runtime-utils",
-    "packages/blobs",
-    "packages/cache",
-    "packages/edge-functions",
-    "packages/functions",
-    "packages/headers",
-    "packages/redirects",
-    "packages/runtime",
-    "packages/static",
-    "packages/dev",
-    "packages/vite-plugin",
-    "packages/otel"
-  ],
   "version": "0.0.0",
   "scripts": {
+    "build": "pnpm run --sort -r build",
+    "dev": "pnpm run --parallel -r dev",
+    "test": "pnpm run --sort -r test",
     "prepare": "husky",
     "lint": "eslint --cache",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "pnpm run lint -- --fix",
     "format": "prettier --write .",
     "format:ci": "prettier --check ."
   },
@@ -39,5 +26,9 @@
     "husky": "^9.0.0",
     "prettier": "^3.0.0",
     "typescript-eslint": "^8.33.0"
+  },
+  "packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912",
+  "dependencies": {
+    "@types/node": "^22.15.29"
   }
 }
