--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -15,12 +15,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
       - name: Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
       - name: Check formatting
-        run: npm run format:ci
+        run: pnpm run format:ci
