--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,17 +16,20 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+
       - name: Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'npm'
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci --no-audit
+        run: pnpm install
 
       - name: Build
-        run: npm run build --workspaces=true
+        run: pnpm build
 
       - name: Lint
-        run: npm run lint
+        run: pnpm run lint
