--- a/.github/workflows/publint.yaml
+++ b/.github/workflows/publint.yaml
@@ -17,14 +17,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
       - name: Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
-          cache: 'npm'
+          cache: 'pnpm'
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
       - name: Build
-        run: npm run build --workspaces=true
+        run: pnpm build
       - name: Publint
-        run: npm run publint --workspaces=true --if-present
+        run: pnpm -r run publint
