--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -51,13 +51,13 @@
   "scripts": {
     "dev": "tsup-node --watch",
     "build": "tsup-node",
-    "prepack": "npm run build",
-    "test": "run-s test:ci",
-    "test:dev": "run-s build test:dev:*",
+    "prepack": "pnpm run build",
+    "test": "pnpm run test:ci",
+    "test:dev": "pnpm run /^(build|test:dev:.*)$/",
     "test:dev:tsd": "tsd",
     "test:dev:vitest": "vitest",
-    "test:ci": "run-s test:ci:*",
-    "test:ci:vitest": "npm run build && vitest run",
+    "test:ci": "pnpm run /test:ci:.*/",
+    "test:ci:vitest": "pnpm run build && vitest run",
     "publint": "npx -y publint --strict"
   },
   "ava": {
@@ -80,8 +80,8 @@
     "test": "test"
   },
   "dependencies": {
-    "@netlify/blobs": "9.1.5",
-    "@netlify/dev-utils": "3.1.1",
+    "@netlify/blobs": "workspace:*",
+    "@netlify/dev-utils": "workspace:*",
     "@netlify/serverless-functions-api": "2.1.0",
     "@netlify/zip-it-and-ship-it": "^12.1.1",
     "cron-parser": "^4.9.0",
@@ -96,10 +96,9 @@
   "devDependencies": {
     "@types/semver": "^7.5.8",
     "@types/source-map-support": "^0.5.10",
-    "npm-run-all2": "^5.0.0",
     "semver": "^7.6.3",
     "tsd": "^0.32.0",
-    "tsup": "^8.0.2",
+    "tsup": "^8.0.0",
     "vitest": "^3.0.0"
   },
   "engines": {
