--- a/packages/headers/package.json
+++ b/packages/headers/package.json
@@ -15,10 +15,10 @@
   "scripts": {
     "build": "tsup-node",
     "dev": "tsup-node --watch",
-    "prepack": "npm run build",
+    "prepack": "pnpm run build",
     "publint": "npx -y publint --strict",
     "test": "vitest run",
-    "test:ci": "npm run build && vitest run",
+    "test:ci": "pnpm run build && vitest run",
     "test:dev": "vitest"
   },
   "keywords": [
@@ -32,8 +32,9 @@
   },
   "author": "Netlify Inc.",
   "devDependencies": {
-    "@netlify/dev-utils": "^3.1.1",
+    "@netlify/dev-utils": "workspace:*",
     "@types/node": "^20.17.57",
+    "tsup": "^8.0.0",
     "vitest": "^3.1.4"
   },
   "dependencies": {
