--- a/packages/runtime-utils/package.json
+++ b/packages/runtime-utils/package.json
@@ -14,10 +14,10 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "prepack": "npm run build",
+    "prepack": "pnpm run build",
     "test": "vitest run",
     "test:dev": "vitest",
-    "test:ci": "npm run build && vitest run",
+    "test:ci": "pnpm run build && vitest run",
     "dev": "tsup-node --watch",
     "publint": "npx -y publint --strict"
   },
