--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -14,10 +14,10 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "prepack": "npm run build",
+    "prepack": "pnpm run build",
     "test": "vitest run",
     "test:dev": "vitest",
-    "test:ci": "npm run build && vitest run",
+    "test:ci": "pnpm run build && vitest run",
     "dev": "tsup-node --watch",
     "publint": "npx -y publint --strict"
   },
@@ -29,13 +29,13 @@
   },
   "author": "Netlify Inc.",
   "dependencies": {
-    "@netlify/blobs": "^9.1.5",
-    "@netlify/cache": "3.0.1",
-    "@netlify/runtime-utils": "2.1.0",
-    "@netlify/types": "2.0.1"
+    "@netlify/blobs": "workspace:*",
+    "@netlify/cache": "workspace:*",
+    "@netlify/runtime-utils": "workspace:*",
+    "@netlify/types": "workspace:*"
   },
   "devDependencies": {
-    "@netlify/dev-utils": "^3.1.1",
+    "@netlify/dev-utils": "workspace:*",
     "@types/node": "^20.17.57",
     "tsup": "^8.0.0",
     "vitest": "^3.0.0"
