--- a/packages/static/package.json
+++ b/packages/static/package.json
@@ -15,10 +15,10 @@
   ],
   "scripts": {
     "build": "tsup-node",
-    "prepack": "npm run build",
+    "prepack": "pnpm run build",
     "test": "vitest run",
     "test:dev": "vitest",
-    "test:ci": "npm run build && vitest run",
+    "test:ci": "pnpm run build && vitest run",
     "dev": "tsup-node --watch",
     "publint": "npx -y publint --strict"
   },
@@ -33,9 +33,9 @@
     "test": "test"
   },
   "devDependencies": {
-    "@netlify/dev-utils": "^3.1.1",
+    "@netlify/dev-utils": "workspace:*",
     "@types/mime-types": "^2.1.4",
-    "tsup": "^8.5.0",
+    "tsup": "^8.0.0",
     "vitest": "^3.1.4"
   },
   "dependencies": {
