--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-n": "17.17.0",
     "husky": "^9.0.0",
     "prettier": "^3.0.0",
+    "publint": "^0.3.12",
     "tsup": "^8.5.0",
     "typescript-eslint": "^8.33.0",
     "vitest": "^3.2.1"
