--- a/packages/blobs/package.json
+++ b/packages/blobs/package.json
@@ -54,7 +54,7 @@
     "test:dev:vitest": "vitest",
     "test:dev:vitest:watch": "vitest watch",
     "test:ci:vitest": "vitest run",
-    "publint": "npx -y publint --strict"
+    "publint": "publint --strict"
   },
   "keywords": [],
   "license": "MIT",
