--- a/packages/edge-functions/package.json
+++ b/packages/edge-functions/package.json
@@ -35,7 +35,7 @@
     "test:dev": "vitest",
     "test:ci": "pnpm run build && vitest run",
     "dev": "tsup-node --watch",
-    "publint": "npx -y publint --strict"
+    "publint": "publint --strict"
   },
   "keywords": [
     "netlify",
