--- a/packages/headers/package.json
+++ b/packages/headers/package.json
@@ -16,7 +16,7 @@
     "build": "tsup-node",
     "dev": "tsup-node --watch",
     "prepack": "pnpm run build",
-    "publint": "npx -y publint --strict",
+    "publint": "publint --strict",
     "test": "vitest run",
     "test:ci": "pnpm run build && vitest run",
     "test:dev": "vitest"
