--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -19,7 +19,7 @@
     "test:ci": "pnpm run build && pnpm run test",
     "dev": "tsup-node --watch",
     "types": "tsc --noEmit",
-    "publint": "npx -y publint --strict"
+    "publint": "publint --strict"
   },
   "keywords": [],
   "license": "MIT",
