backstage: run only specific packages on node 18

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -85,7 +85,7 @@ jobs:
         run: pnpm install
       - name: Build
         run: >-
-          pnpm build
+          pnpm --filter "./packages/{types,dev-utils,runtime-utils,blobs,edge-functions,functions}" --sort run build
       - name: Tests
         run: >-
-          pnpm test
+          pnpm --filter "./packages/{types,dev-utils,runtime-utils,blobs,edge-functions,functions}" --sort run test
